# SkiaUI

./: .gitattributes  .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/temple/skiaui/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SkiaViewContext.cpp  SkiaViewContext.h  native-lib.cpp
app/src/main/cpp/anim/: AnimatorSet.cpp  AnimatorSet.h  IAnimator.cpp  IAnimator.h  LinearAnimator.cpp  LinearAnimator.h
app/src/main/cpp/base/: HYScopedLock.h  Looper.cpp  Looper.h  native_log.h  time_utils.cpp
app/src/main/cpp/flexbox/: FlexLayout.h  FlexLayoutParser.cpp  FlexLayoutParser.h
app/src/main/cpp/fliter/: IFilter.h  SkiaFilter.cpp  SkiaFilter.h
app/src/main/cpp/gl/: HYAssetsHolder.h  HYEGLContext.cpp  HYEGLContext.h  HYEGLCore.cpp  HYEGLCore.h  HYEGLRender.cpp  HYEGLRender.h
app/src/main/cpp/plugin/: IPlugin.cpp  IPlugin.h  PluginManager.cpp  PluginManager.h
app/src/main/cpp/scroll/: Scroller.cpp  Scroller.h
app/src/main/cpp/test/: HYListAdapter.cpp  HYListAdapter.h  HYListView.cpp  HYListView.h  HYRecyclerView.cpp  HYRecyclerView.h  HorizontalDrawTest.cpp  HorizontalDrawTest.h  ITestDraw.cpp  ITestDraw.h  ImageViewTest.cpp  ImageViewTest.h  ListViewTest.cpp  ListViewTest.h  MovingDrawTest.cpp  MovingDrawTest.h  PercentViewTest.cpp  PercentViewTest.h  ProgressBarDrawTest.cpp  ProgressBarDrawTest.h  ScrollViewTest.cpp  ScrollViewTest.h  TextViewTest.cpp  TextViewTest.h  VerticalDrawTest.cpp  VerticalDrawTest.h
app/src/main/cpp/touch/: ScrollDispatcher.cpp  ScrollDispatcher.h  TouchEvent.h  TouchEventDispatcher.cpp  TouchEventDispatcher.h  Velocity.h
app/src/main/cpp/widget/: BaseListAdapter.cpp  BaseListAdapter.h  BaseListView.cpp  BaseListView.h  Button.cpp  Button.h  FlexboxLayout.cpp  FlexboxLayout.h  FrameLayout.cpp  FrameLayout.h  ImageView.cpp  ImageView.h  LayoutParams.cpp  LayoutParams.h  LinearLayout.cpp  LinearLayout.h  MeasureSpec.h  MovingView.cpp  MovingView.h  ProgressBar.cpp  ProgressBar.h  RecyclerView.h  RecyclerViewAdapter.h  RecyclerViewHolder.h  ScrollView.cpp  ScrollView.h  TextView.cpp  TextView.h  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h
app/src/main/cpp/yoga/: Yoga.cpp
app/src/main/java/com/temple/skiaui/: HYSkiaEngine.kt  HYSkiaSurfaceView.kt  HYSkiaTextureView.kt  HYSkiaView.kt  MainActivity.kt  RenderMode.kt
app/src/main/jniLibs/skia/include/core/: SkImageInfo.h  SkLRUCache.h
app/src/main/jniLibs/skia/include/gpu/: GrBackendSurface.h  GrDirectContext.h
app/src/main/jniLibs/skia/modules/skparagraph/include/: ParagraphCache.h
app/src/main/jniLibs/skia/modules/skunicode/include/: SkUnicode.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/temple/skiaui/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
